# echo_backend

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
container/: Dockerfile
scripts/: install-dynamo.sh
src/echo_backend/: __init__.py  __main__.py  engine.py  main.py
tests/: conftest.py  test_engine.py  test_integration.py
